<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.UserDetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSecondaryVariant">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/avatar_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/detail_img_avatar"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="20dp"
                            android:layout_centerHorizontal="true"
                            tools:src="@tools:sample/avatars"/>

                        <TextView
                            android:id="@+id/profile_name"
                            style="@style/name"
                            android:layout_below="@id/detail_img_avatar"
                            android:layout_marginTop="2dp"
                            tools:text="@string/name" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/relative_bio"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/profile_bio"
                            style="@style/bio"
                            tools:text="@string/bio"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/relative_company"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <ImageView
                            android:id="@+id/profile_company_icon"
                            style="@style/bio"
                            android:src="@drawable/ic_company"
                            android:contentDescription="@string/avatar"/>

                        <TextView
                            android:id="@+id/profile_company_name"
                            style="@style/status"
                            android:layout_toEndOf="@id/profile_company_icon"
                            tools:text="@string/company"/>

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/profile_link"
                        style="@style/link"
                        tools:text="@string/profile_link"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:background="@drawable/status_shape"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:id="@+id/relative_repository"
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp">

                            <TextView
                                android:id="@+id/repository_counter"
                                style="@style/status"
                                tools:text="@string/repository_counter"/>

                            <TextView
                                android:id="@+id/repository_amount"
                                style="@style/status"
                                android:layout_below="@id/repository_counter"
                                android:text="@string/repository_amount"/>

                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/relative_followers"
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp">

                            <TextView
                                android:id="@+id/followers_counter"
                                style="@style/status"
                                tools:text="@string/followers_counter"/>

                            <TextView
                                android:id="@+id/followers_amount"
                                style="@style/status"
                                android:layout_below="@id/followers_counter"
                                android:text="@string/followers_amount"/>

                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/relative_following"
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp">

                            <TextView
                                android:id="@+id/following_counter"
                                style="@style/status"
                                tools:text="@string/following_counter"/>

                            <TextView
                                android:id="@+id/following_amount"
                                style="@style/status"
                                android:layout_below="@id/following_counter"
                                android:text="@string/following_amount"/>

                        </RelativeLayout>

                    </LinearLayout>

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/profile_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/profile_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/profile_tab"
            android:overScrollMode="never"
            app:tabGravity="fill"
            app:tabBackground="@drawable/tab_selector"
            app:tabTextColor="?attr/colorSecondary"
            app:tabIndicatorHeight="0dp"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/profile_view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/action_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:contentDescription="@string/favorite"
        android:src="@drawable/ic_favorite_border"
        android:backgroundTint="?attr/colorPrimaryVariant"
        app:borderWidth="0dp"
        app:tint="?attr/colorSecondaryVariant"
        android:layout_gravity="end|bottom"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/action_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/share_menu"
        android:src="@drawable/ic_share"
        android:backgroundTint="?attr/colorPrimaryVariant"
        app:borderWidth="0dp"
        app:tint="?attr/colorSecondaryVariant"
        android:layout_gravity="end|bottom"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

